# opencc_jieba_pyo3

./: BUILD.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml  use_opencc_jieba_pyo3.py  use_opencc_jieba_pyo3_dev.py
.github/workflows/: build.yml  build_artifacts.yml
opencc_jieba_pyo3/: __init__.py  __main__.py  office_helper.py  opencc_jieba_pyo3.pyi
python/opencc_jieba_pyo3/: __init__.py  __main__.py  opencc_jieba_pyo3.pyi
src/: lib.rs
tests/: sample.py
