[package]
name = "opencc_jieba_pyo3"
version = "0.7.3"
edition = "2021"
authors = ["laisuk <laisuk@yahoo.com>"]
license = "MIT"
description = "High-performance Chinese text conversion, segmentation and keyword extraction powered by Rust, PyO3, OpenCC lexicons and Jieba."
repository = "https://github.com/laisuk/opencc_jieba_pyo3"
readme = "README.md"
include = [
    # Core
    "/Cargo.toml",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",

    # Rust
    "/src/**",

    # Python bindings
    "/opencc_jieba_pyo3/**/*.py",
    "/opencc_jieba_pyo3/**/*.pyi",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "opencc_jieba_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.27.2", features = ["abi3-py38"] }
#opencc-jieba-rs = { path = "../opencc-jieba-rs" }
#opencc-jieba-rs = { git = "https://github.com/laisuk/opencc-jieba-rs.git", branch = "master" }
opencc-jieba-rs = "0.7.3"

[features]
default = []
gen-import-lib = ["pyo3/generate-import-lib"]

# Enable only when building a Python extension module (e.g. via maturin).
# Do NOT enable by default: `cargo test` builds a standalone executable
# which must link against libpython and will fail in extension-module mode (Linux).
extension-module = ["pyo3/extension-module"]

[package.metadata.maturin]
name = "opencc_jieba_pyo3"