[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "opencc_jieba_pyo3"
dynamic = ["version"]
requires-python = ">=3.7"
description = "A Python extension module powered by Rust Jieba and PyO3, providing fast and accurate Chinese text conversion."
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/laisuk/opencc_jieba_pyo3"
Issues = "https://github.com/laisuk/opencc_jieba_pyo3/issues"
