[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "opencc_jieba_pyo3"
dynamic = ["version"]
requires-python = ">=3.7"
description = "A Python extension module powered by Rust Jieba and PyO3, providing fast and accurate Chinese text conversion."
readme = "README.md"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/laisuk/opencc_jieba_pyo3"
Issues = "https://github.com/laisuk/opencc_jieba_pyo3/issues"
ChangeLog = "https://github.com/laisuk/opencc-jieba-pyo3/blob/master/CHANGELOG.md"
