[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "opencc_jieba_pyo3"
dynamic = ["version"]
requires-python = ">=3.7"
description = "High-performance Chinese text conversion (Simplified ↔ Traditional), segmentation and keyword extraction powered by Rust, PyO3, Jieba and OpenCC lexicons."
readme = "README.md"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/laisuk/opencc_jieba_pyo3"
Issues = "https://github.com/laisuk/opencc_jieba_pyo3/issues"
ChangeLog = "https://github.com/laisuk/opencc_jieba_pyo3/blob/master/CHANGELOG.md"

[project.scripts]
opencc-jieba-pyo3 = "opencc_jieba_pyo3.__main__:main"
